--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "poc-game-idea",
   "version": "1.0.0",
-  "description": "testing ideas for a game",
+  "description": "testing a game idea",
+  "main": "index.mjs",
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {},
   "scripts": {
     "start": "node --experimental-modules index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +20,5 @@
   "bugs": {
     "url": "https://github.com/thearegee/poc-game-idea/issues"
   },
-  "homepage": "https://github.com/thearegee/poc-game-idea#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/thearegee/poc-game-idea#readme"
 }
